# schemafit

./: .dockerignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  RESULTS.md  run.py  sources.tsv
fixtures/: anthropic-bad.json  cohere-bad.json  cohere-structural-bad.json  drift-mock-bad.json  mistral-bad.json  portable-good.json
schemafit/: __init__.py  __main__.py  cli.py  linter.py  live.py  model.py  repair.py  report.py  walk.py
schemafit/rules/: anthropic.json  cohere.json  gemini.json  mistral.json  openai.json
specs/: schemafit-v0.2.md  schemafit-v0.3.md
tests/: test_cli.py  test_lint.py  test_live.py  test_packs_mistral_cohere.py  test_repair.py  test_report_sarif.py  test_walk.py
