[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schemafit"
version = "0.2.0"
description = "Provider-aware structured-output / JSON-Schema CI linter — fail CI before your schema 400s on OpenAI, Anthropic, or Gemini"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan Mercede", email = "dan@danmercede.com" }]
keywords = ["json-schema", "structured-output", "openai", "anthropic", "gemini", "llm", "ci", "linter", "tool-calling"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/OrionArchitekton/schemafit"
Issues = "https://github.com/OrionArchitekton/schemafit/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
# `--live-verify` real provider calls use the standard library (urllib), so the
# core stays dependency-free. This extra is reserved for optional provider SDKs;
# it intentionally adds no dependency today.
live = []

[project.scripts]
schemafit = "schemafit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["schemafit*"]

[tool.setuptools.package-data]
schemafit = ["rules/*.json", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
